# rostok

./: .gitignore  .readthedocs.yaml  1686238049get_object_easy_box_8_827  1686246787get_obj_hard_get_obj_hard_large_ellipsoid_4_277  1686247047get_object_easy_box_7_802  1686248648get_object_parametrized_cylinder_17_523  1695740607mock_with_build_mech-11_221  Dockerfile  LICENSE  README.md  README_en.md  README_en.rst  control.py  docs_environment.yml  environment.yml  environment_copy.yml  environment_no_gui.yml  graph_render_example.py  init_population_cache.pickle  mcts_test.py  node render.py  node.py  node_block_bind.py  node_render.py  parralel_runner.py  playground.py  requirements.txt  robot.py  robotic_rules_tutorial.ipynb  rule_apply_graph_example.py  runner_configs.py  setup.cfg  setup.py  single_runner.py  train_data_10e_1000mcts_2302.pickle  ttt.py  wheels_ruleset.ipynb
.github/: README.rst
app/: 123.py  altenative_app_graph.py  app.py  app_graph.py  app_graph_BOX.py  app_graph_CYLL.py  app_graph_ELL.py  app_graph_new.py  app_new.py  app_new_BOX.py  app_new_CYLL.py  app_new_ELL.py  app_new_fancy_mcts.py  app_new_fancy_mcts_continue.py  app_new_fancy_mcts_parallel.py  app_new_mcts.py  app_new_mcts_continue.py  app_new_multiobject.py  app_tendon.py  app_vocabulary.py  chrono_simulatation.py  chrono_simulation.py  collision_case.py  context.py  control_optimisation.py  control_optimizer.py  control_optimizer_test.py  crossovers_builder.py  evaluate_graph.py  exception_simulation.py  flags_simualtions.py  generate_grasper_cfgs.py  golem_app_BOX.py  (+67 more)
docs/: api.md  (+21 more)
(+661 files in other folders)
