[metadata]
name = rostok
version = 0.0.1
author = BE2R Lab, ITMO
description = Robotics generative tool
long_description = file: README.md

classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    rostok = rostok
packages = find:
# python_requires = >=3.9
